# ROS2_first

./: .gitignore  README.md  ab_pairs.csv  ab_summary.csv  out_A.csv  out_B.csv  pick_best_frame.py
.devcontainer/: devcontainer.json
bags/in_A_B/: metadata.yaml
configs/: bdd100k_det10.yaml  bdd100k_pseudo_det10.yaml  bdd100k_pseudo_train.txt  bdd100k_pseudo_val.txt
runs/bdd100k_100k_yolo11n/: args.yaml
runs/bdd100k_100k_yolo11n_cpu/: args.yaml
runs/bdd100k_100k_yolo11n_cpu_abs/: args.yaml
runs/bdd100k_100k_yolo11n_cpu_dir/: args.yaml
runs/bdd100k_100k_yolo11n_cpu_labeled/: args.yaml
runs/detect/yolo_bdd10_pseudo/: args.yaml  results.csv
scripts/: ab_agreement.py  eval_coco_from_csv.py  guess_offset.py  make_bag_from_dataset.sh  pseudolabel_from_coco.py  run_ab_all_splits.sh  run_ab_seq.sh  run_single_case.sh
src/: image_pub_test.py  mot_node.py  overlay_viz.py
src/ab_test_bringup/: CMakeLists.txt  package.xml
src/ab_test_bringup/launch/: ab_test.launch.py  dataset_ab.launch.py
src/bbox_msgs/: CMakeLists.txt  package.xml
src/bbox_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg
src/image_dir_pub_py/: package.xml  setup.cfg  setup.py
src/image_pub_cpp/: CMakeLists.txt  package.xml
src/image_pub_cpp/src/: image_publisher_node.cpp
src/my_msgs/: CMakeLists.txt  package.xml
src/my_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg  Track.msg  TrackArray.msg
src/yolo_subscriber_py/: package.xml  setup.py
src/yolo_subscriber_py/launch/: run_demo.launch.py
src/yolo_subscriber_py/yolo_subscriber_py/: main.py
ultralytics/nn/modules/: activation.py  block.py
ultralytics/utils/: torch_utils
