<?xml version="1.0"?>
<package format="3">
  <name>bbox_msgs</name>
  <version>0.0.0</version>
  <description>BoundingBox/BoundingBoxes message definitions</description>
  <maintainer email="lee911230@gmail.com">YuJung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 최상위에도 한 줄 추가 (Iron에서 파싱 꼬임 방지용) -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
