<?xml version="1.0"?>
<package format="3">
  <name>image_dir_pub_py</name>
  <version>0.0.0</version>
  <description>Publish images from a directory to /image_raw</description>
  <maintainer email="you@example.com">YuJung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>