<?xml version="1.0"?>
<package format="3">
  <name>my_msgs</name>
  <version>0.0.0</version>
  <description>Custom message definitions (BoundingBox, BoundingBoxes)</description>
  <maintainer email="lee911230@gmail.com">YuJung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>